--- a/src/main/resources/com/example/together/new-group-view.fxml
+++ b/src/main/resources/com/example/together/new-group-view.fxml
@@ -7,39 +7,39 @@
 <?import javafx.scene.text.*?>
 <?import org.kordamp.ikonli.javafx.*?>
 
-<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.NewGroupController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.NewGroupController">
     <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="1300.0" StackPane.alignment="CENTER_RIGHT" />
     <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
         <left>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
                 <VBox.margin>
-                    <Insets top="15.0"/>
+                    <Insets top="15.0" />
                 </VBox.margin>
                 <padding>
-                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                 </padding>
                 <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
                     <graphic>
-                        <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40"/>
+                        <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40" />
                     </graphic>
                 </Button>
                 <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
                     <padding>
-                        <Insets bottom="15.0" left="5.0" right="5.0" top="15.0"/>
+                        <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
                     </padding>
                     <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
                         <graphic>
-                            <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40"/>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40" />
                         </graphic>
                     </Button>
                     <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
                         <graphic>
-                            <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40"/>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40" />
                         </graphic>
                     </Button>
                     <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
                         <graphic>
-                            <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40"/>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40" />
                         </graphic>
                     </Button>
                 </VBox>
@@ -54,50 +54,50 @@
         <center>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                 <padding>
-                    <Insets left="100.0" right="20.0" top="10.0"/>
+                    <Insets left="100.0" right="20.0" top="10.0" />
                 </padding>
                 <Label text="Name">
                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                     </padding>
                     <font>
-                        <Font name="JetBrains Mono Medium" size="18.0"/>
+                        <Font name="JetBrains Mono Medium" size="18.0" />
                     </font>
                 </Label>
-                <TextField fx:id="textfieldName" prefHeight="25.0" prefWidth="736.0"/>
+                <TextField fx:id="textfieldName" prefHeight="25.0" prefWidth="736.0" />
                 <Label text="Description">
                     <padding>
-                        <Insets bottom="5.0" top="5.0"/>
+                        <Insets bottom="5.0" top="5.0" />
                     </padding>
                     <font>
-                        <Font name="JetBrains Mono Medium" size="18.0"/>
+                        <Font name="JetBrains Mono Medium" size="18.0" />
                     </font>
                     <VBox.margin>
-                        <Insets top="20.0"/>
+                        <Insets top="20.0" />
                     </VBox.margin>
                 </Label>
                 <TextArea fx:id="textAreaInfo" prefHeight="465.0" prefWidth="1070.0">
                     <padding>
-                        <Insets bottom="5.0" top="5.0"/>
+                        <Insets bottom="5.0" top="5.0" />
                     </padding>
                 </TextArea>
                 <Label fx:id="labelRequiredFields" text="Check that you filled all fields." visible="false">
                     <font>
-                        <Font name="JetBrains Mono Medium" size="12.0"/>
+                        <Font name="JetBrains Mono Medium" size="12.0" />
                     </font>
                 </Label>
                 <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="1182.0">
                     <padding>
-                        <Insets bottom="10.0"/>
+                        <Insets bottom="10.0" />
                     </padding>
                     <Button mnemonicParsing="false" onAction="#createGroup" styleClass="darkButton" text="Create">
                         <font>
-                            <Font size="18.0"/>
+                            <Font size="18.0" />
                         </font>
                     </Button>
                     <Button mnemonicParsing="false" onAction="#cancel" styleClass="lightButton" text="Cancel">
                         <font>
-                            <Font size="18.0"/>
+                            <Font size="18.0" />
                         </font>
                     </Button>
                 </HBox>
